vendor/wdsp/wdsp.h

/*  ---- RXA.c ------------------------------------------------------------- */

WDSP_API void RXASetMP (int channel, int mp);
WDSP_API void RXASetNC (int channel, int nc);
/*  ---- TXA.c ------------------------------------------------------------- */

WDSP_API void SetTXABandpassFreqs (int channel, double f_low, double f_high);
WDSP_API void SetTXAMode (int channel, int mode);
WDSP_API void SetRXAAMDSBMode (int channel, int sbmode);
WDSP_API void SetRXAANFPosition (int channel, int position);
WDSP_API void SetRXAANFRun (int channel, int run);
WDSP_API void SetRXAANFVals (int channel, int taps, int delay, double gain, double leakage);
WDSP_API void SetRXAANRPosition (int channel, int position);
WDSP_API void SetRXAANRRun (int channel, int run);
WDSP_API void SetRXAANRVals (int channel, int taps, int delay, double gain, double leakage);
WDSP_API void SetTXABandpassRun (int channel, int run);
WDSP_API void SetTXABandpassWindow (int channel, int wintype);
/*  ---- div.c ------------------------------------------------------------- */

WDSP_API void SetEXTDIVBuffsize (int id, int size);
WDSP_API void SetEXTDIVNr (int id, int nr);
WDSP_API void SetEXTDIVOutput (int id, int output);
WDSP_API void SetEXTDIVRotate (int id, int nr, double *Irotate, double *Qrotate);
WDSP_API void SetEXTDIVRun (int id, int run);
WDSP_API void create_divEXT (int id, int run, int nr, int size);
WDSP_API void xdivEXT (int id, int nsamples, double **in, double *out);
/*  ---- emnr.c ------------------------------------------------------------ */

WDSP_API void SetRXAEMNRPosition (int channel, int position);
WDSP_API void SetRXAEMNRaeRun (int channel, int run);
WDSP_API void SetRXAEMNRgainMethod (int channel, int method);
WDSP_API void SetRXAEMNRnpeMethod (int channel, int method);
WDSP_API void SetRXAEQRun (int channel, int run);
WDSP_API void SetRXAGrphEQ (int channel, int *rxeq);
WDSP_API void SetRXAGrphEQ10 (int channel, int *rxeq);
WDSP_API void SetTXAEQRun (int channel, int run);
WDSP_API void SetRXAFMDeviation (int channel, double deviation);
enum txaMeterType {
  TXA_MIC_PK,
  TXA_MIC_AV,
  TXA_EQ_PK,
  TXA_EQ_AV,
  TXA_LVLR_PK,
  TXA_LVLR_AV,
  TXA_LVLR_GAIN,
  TXA_CFC_PK,
  TXA_CFC_AV,
  TXA_CFC_GAIN,
  TXA_COMP_PK,
  TXA_COMP_AV,
  TXA_ALC_PK,
  TXA_ALC_AV,
  TXA_ALC_GAIN,
  TXA_OUT_PK,
  TXA_OUT_AV,
  TXA_METERTYPE_LAST
};
WDSP_API double GetRXAMeter(int channel, int mt);
/*  ---- nbp.c ------------------------------------------------------------- */

WDSP_API int RXANBPAddNotch(int channel, int notch, double fcenter, double fwidth, int active);
WDSP_API void RXANBPSetFreqs(int channel, double flow, double fhigh);
WDSP_API void RXANBPSetNotchesRun(int channel, int run);
WDSP_API void RXANBPSetShiftFrequency(int channel, double shift);
WDSP_API void RXANBPSetTuneFrequency(int channel, double tunefreq);
WDSP_API void SetRXANNRMaskFloor(int channel, double floor_db);
WDSP_API int SetRXANNRModel(int channel, int slot);
/*  ---- nob.c ------------------------------------------------------------- */

WDSP_API void SetEXTANBAdvtime(int id, double time);
WDSP_API void SetEXTANBBacktau(int id, double tau);
WDSP_API void SetEXTANBHangtime(int id, double time);
WDSP_API void SetEXTANBRun(int id, int run);
WDSP_API void SetEXTANBSamplerate(int id, int rate);
WDSP_API void SetEXTANBTau(int id, double tau);
WDSP_API void SetEXTANBThreshold(int id, double thresh);
WDSP_API void create_anbEXT(int id, int run, int buffsize, double samplerate, double tau, double hangtime,
                            double advtime, double backtau, double threshold);
WDSP_API void destroy_anbEXT(int id);
WDSP_API void flush_anbEXT(int id);
WDSP_API void xanbEXT(int id, double *in, double *out);
WDSP_API void xanbEXTF(int id, float *I, float *Q);
/*  ---- nobII.c ----------------------------------------------------------- */

WDSP_API void SetEXTNOBAdvtime(int id, double time);
WDSP_API void SetEXTNOBBacktau(int id, double tau);
WDSP_API void SetEXTNOBBuffsize(int id, int size);
WDSP_API void SetEXTNOBHangtime(int id, double time);
WDSP_API void SetEXTNOBMode(int id, int mode);
WDSP_API void SetEXTNOBRun(int id, int run);
WDSP_API void SetEXTNOBSamplerate(int id, int rate);
WDSP_API void SetEXTNOBTau(int id, double tau);
WDSP_API void SetEXTNOBThreshold(int id, double thresh);
WDSP_API void create_nobEXT(int id, int run, int mode, int buffsize, double samplerate, double slewtime,
                            double hangtime, double advtime, double backtau, double threshold);
WDSP_API void destroy_nobEXT(int id);
WDSP_API void flush_nobEXT(int id);
WDSP_API void xnobEXT(int id, double *in, double *out);
WDSP_API void xnobEXTF(int id, float *I, float *Q);
/*  ---- patchpanel.c ------------------------------------------------------ */

WDSP_API void SetRXAPanelBinaural(int channel, int bin);
WDSP_API void SetRXAPanelPan(int channel, double pan);
/*  ---- shift.c ----------------------------------------------------------- */

WDSP_API void SetRXAShiftFreq(int channel, double fshift);
WDSP_API void SetRXAShiftRun(int channel, int run);
WDSP_API void SetRXASNBAOutputBandwidth(int channel, double flow, double fhigh);
WDSP_API void SetRXASNBARun(int channel, int run);
/*  ---- wcpAGC.c ---------------------------------------------------------- */

WDSP_API void GetRXAAGCHangLevel(int channel, double *hangLevel);
WDSP_API void GetRXAAGCHangThreshold(int channel, int *hangthreshold);
WDSP_API void GetRXAAGCThresh(int channel, double *thresh, double size, double rate);
WDSP_API void GetRXAAGCTop(int channel, double *max_agc);
WDSP_API void SetRXAAGCAttack(int channel, int attack);
WDSP_API void SetRXAAGCDecay(int channel, int decay);
WDSP_API void SetRXAAGCFixed(int channel, double fixed_agc);
WDSP_API void SetRXAAGCHang(int channel, int hang);
WDSP_API void SetRXAAGCHangLevel(int channel, double hangLevel);
WDSP_API void SetRXAAGCHangThreshold(int channel, int hangthreshold);
WDSP_API void SetRXAAGCMode(int channel, int mode);
WDSP_API void SetRXAAGCSlope(int channel, int slope);
WDSP_API void SetRXAAGCThresh(int channel, double thresh, double size, double rate);
WDSP_API void SetRXAAGCTop(int channel, double max_agc);