src/wdsp_sys/mod.rs

unsafe extern "C" {
    /// The single documented operator-facing NNR tuning control (WDSP
    /// Guide Rev 2.1.0, section 5.3.20) -- limits how far any frequency
    /// bin can be attenuated, i.e. how much real received noise is let
    /// through. Range -10.0 (most noise passed) to -50.0 (max
    /// suppression), default -25.0. The guide explicitly does NOT
    /// document Alpha/AlphaKnee/Tau/MaxGain/Smooth/cmode/TestMode as
    /// operator controls -- only this one and the model selector below.
    pub fn SetRXANNRMaskFloor(channel: ::std::os::raw::c_int, floor_db: f64);
}
unsafe extern "C" {
    /// Selects which of the two built-in trained models NNR uses: 0 =
    /// Standard (default, ~10% of one core), 1 = Premium (~32%,
    /// measurably better). Both are compiled in and already loaded, so
    /// switching is immediate with no pause (WDSP Guide 5.3.20). Returns
    /// the slot actually in use -- may differ from the requested slot
    /// if that slot has no model in this build.
    pub fn SetRXANNRModel(channel: ::std::os::raw::c_int, slot: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetRXAEMNRgainMethod(channel: ::std::os::raw::c_int, method: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAEMNRnpeMethod(channel: ::std::os::raw::c_int, method: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAEMNRPosition(channel: ::std::os::raw::c_int, position: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAANRPosition(channel: ::std::os::raw::c_int, position: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAANFPosition(channel: ::std::os::raw::c_int, position: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAANFRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn GetRXAMeter(channel: ::std::os::raw::c_int, mt: ::std::os::raw::c_int) -> f64;
}
unsafe extern "C" {
    pub fn SetRXAPanelBinaural(channel: ::std::os::raw::c_int, bin: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAPanelPan(channel: ::std::os::raw::c_int, pan: f64);
}
unsafe extern "C" {
    pub fn RXANBPSetFreqs(channel: ::std::os::raw::c_int, low: f64, high: f64);
}
unsafe extern "C" {
    pub fn RXANBPAddNotch(channel: ::std::os::raw::c_int, notch: ::std::os::raw::c_int, fcenter: f64, fwidth: f64, active: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn RXANBPSetNotchesRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn RXANBPSetTuneFrequency(channel: ::std::os::raw::c_int, tunefreq: f64);
}
unsafe extern "C" {
    pub fn RXANBPSetShiftFrequency(channel: ::std::os::raw::c_int, shift: f64);
}
unsafe extern "C" {
    pub fn SetRXASNBAOutputBandwidth(channel: ::std::os::raw::c_int, low: f64, high: f64);
}
unsafe extern "C" {
    pub fn SetRXAANRRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAEMNRaeRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXASNBARun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAShiftRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAShiftFreq(channel: ::std::os::raw::c_int, fshift: f64);
}
unsafe extern "C" {
    pub fn SetRXAAMDSBMode(channel: ::std::os::raw::c_int, sbmode: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAANRVals(
        channel: ::std::os::raw::c_int,
        taps: ::std::os::raw::c_int,
        delay: ::std::os::raw::c_int,
        gain: f64,
        leakage: f64,
    );
}
unsafe extern "C" {
    pub fn SetRXAANFVals(
        channel: ::std::os::raw::c_int,
        taps: ::std::os::raw::c_int,
        delay: ::std::os::raw::c_int,
        gain: f64,
        leakage: f64,
    );
}
unsafe extern "C" {
    pub fn SetRXAAGCMode(channel: ::std::os::raw::c_int, mode: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAAGCFixed(channel: ::std::os::raw::c_int, fixed_agc: f64);
}
unsafe extern "C" {
    pub fn SetRXAAGCAttack(channel: ::std::os::raw::c_int, attack: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAAGCDecay(channel: ::std::os::raw::c_int, decay: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAAGCHang(channel: ::std::os::raw::c_int, hang: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn GetRXAAGCHangLevel(channel: ::std::os::raw::c_int, hangLevel: *mut f64);
}
unsafe extern "C" {
    pub fn SetRXAAGCHangLevel(channel: ::std::os::raw::c_int, hangLevel: f64);
}
unsafe extern "C" {
    pub fn GetRXAAGCHangThreshold(
        channel: ::std::os::raw::c_int,
        hangthreshold: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn SetRXAAGCHangThreshold(
        channel: ::std::os::raw::c_int,
        hangthreshold: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn GetRXAAGCTop(channel: ::std::os::raw::c_int, max_agc: *mut f64);
}
unsafe extern "C" {
    pub fn SetRXAAGCTop(channel: ::std::os::raw::c_int, max_agc: f64);
}
unsafe extern "C" {
    pub fn SetRXAAGCSlope(channel: ::std::os::raw::c_int, slope: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAAGCThresh(channel: ::std::os::raw::c_int, thresh: f64, size: f64, rate: f64);
}
unsafe extern "C" {
    pub fn GetRXAAGCThresh(channel: ::std::os::raw::c_int, thresh: *mut f64, size: f64, rate: f64);
}
unsafe extern "C" {
    pub fn SetRXAFMDeviation(channel: ::std::os::raw::c_int, deviation: f64);
}
unsafe extern "C" {
    pub fn RXASetNC(channel: ::std::os::raw::c_int, nc: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn RXASetMP(channel: ::std::os::raw::c_int, nc: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAEQRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetRXAGrphEQ(channel: ::std::os::raw::c_int, rxeq: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    // Not declared in the vendored wdsp.h this file was originally
    // generated from (only the 3-band SetRXAGrphEQ above is) -- but
    // confirmed present as a real exported symbol in vendor/libwdsp.a
    // via `nm` (eq.c defines it unconditionally, just without a header
    // prototype). Same array layout as SetRXAGrphEQ, just 11 entries
    // (preamp + 10 bands, 32Hz..16kHz) instead of 4.
    pub fn SetRXAGrphEQ10(channel: ::std::os::raw::c_int, rxeq: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn create_divEXT(
        id: ::std::os::raw::c_int,
        run: ::std::os::raw::c_int,
        nr: ::std::os::raw::c_int,
        size: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn SetEXTDIVRun(id: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetEXTDIVBuffsize(id: ::std::os::raw::c_int, size: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetEXTDIVNr(id: ::std::os::raw::c_int, nr: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetEXTDIVOutput(id: ::std::os::raw::c_int, output: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetEXTDIVRotate(
        id: ::std::os::raw::c_int,
        nr: ::std::os::raw::c_int,
        Irotate: *mut f64,
        Qrotate: *mut f64,
    );
}
unsafe extern "C" {
    pub fn xdivEXT(
        id: ::std::os::raw::c_int,
        nsamples: ::std::os::raw::c_int,
        in_: *mut *mut f64,
        out: *mut f64,
    );
}
unsafe extern "C" {
    pub fn create_anbEXT(
        id: ::std::os::raw::c_int,
        run: ::std::os::raw::c_int,
        buffsize: ::std::os::raw::c_int,
        samplerate: f64,
        tau: f64,
        hangtime: f64,
        advtime: f64,
        backtau: f64,
        threshold: f64,
    );
}
unsafe extern "C" {
    pub fn destroy_anbEXT(id: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn flush_anbEXT(id: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn xanbEXT(id: ::std::os::raw::c_int, in_: *mut f64, out: *mut f64);
}
unsafe extern "C" {
    pub fn SetEXTANBRun(id: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetEXTANBSamplerate(id: ::std::os::raw::c_int, rate: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetEXTANBTau(id: ::std::os::raw::c_int, tau: f64);
}
unsafe extern "C" {
    pub fn SetEXTANBHangtime(id: ::std::os::raw::c_int, time: f64);
}
unsafe extern "C" {
    pub fn SetEXTANBAdvtime(id: ::std::os::raw::c_int, time: f64);
}
unsafe extern "C" {
    pub fn SetEXTANBBacktau(id: ::std::os::raw::c_int, tau: f64);
}
unsafe extern "C" {
    pub fn SetEXTANBThreshold(id: ::std::os::raw::c_int, thresh: f64);
}
unsafe extern "C" {
    pub fn xanbEXTF(id: ::std::os::raw::c_int, I: *mut f32, Q: *mut f32);
}
unsafe extern "C" {
    pub fn create_nobEXT(
        id: ::std::os::raw::c_int,
        run: ::std::os::raw::c_int,
        mode: ::std::os::raw::c_int,
        buffsize: ::std::os::raw::c_int,
        samplerate: f64,
        slewtime: f64,
        hangtime: f64,
        advtime: f64,
        backtau: f64,
        threshold: f64,
    );
}
unsafe extern "C" {
    pub fn destroy_nobEXT(id: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn flush_nobEXT(id: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn xnobEXT(id: ::std::os::raw::c_int, in_: *mut f64, out: *mut f64);
}
unsafe extern "C" {
    pub fn SetEXTNOBRun(id: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetEXTNOBMode(id: ::std::os::raw::c_int, mode: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetEXTNOBBuffsize(id: ::std::os::raw::c_int, size: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetEXTNOBSamplerate(id: ::std::os::raw::c_int, rate: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetEXTNOBTau(id: ::std::os::raw::c_int, tau: f64);
}
unsafe extern "C" {
    pub fn SetEXTNOBHangtime(id: ::std::os::raw::c_int, time: f64);
}
unsafe extern "C" {
    pub fn SetEXTNOBAdvtime(id: ::std::os::raw::c_int, time: f64);
}
unsafe extern "C" {
    pub fn SetEXTNOBBacktau(id: ::std::os::raw::c_int, tau: f64);
}
unsafe extern "C" {
    pub fn SetEXTNOBThreshold(id: ::std::os::raw::c_int, thresh: f64);
}
unsafe extern "C" {
    pub fn xnobEXTF(id: ::std::os::raw::c_int, I: *mut f32, Q: *mut f32);
}
pub const txaMeterType_TXA_MIC_PK: txaMeterType = 0;
pub const txaMeterType_TXA_MIC_AV: txaMeterType = 1;
pub const txaMeterType_TXA_EQ_PK: txaMeterType = 2;
pub const txaMeterType_TXA_EQ_AV: txaMeterType = 3;
pub const txaMeterType_TXA_LVLR_PK: txaMeterType = 4;
pub const txaMeterType_TXA_LVLR_AV: txaMeterType = 5;
pub const txaMeterType_TXA_LVLR_GAIN: txaMeterType = 6;
pub const txaMeterType_TXA_CFC_PK: txaMeterType = 7;
pub const txaMeterType_TXA_CFC_AV: txaMeterType = 8;
pub const txaMeterType_TXA_CFC_GAIN: txaMeterType = 9;
pub const txaMeterType_TXA_COMP_PK: txaMeterType = 10;
pub const txaMeterType_TXA_COMP_AV: txaMeterType = 11;
pub const txaMeterType_TXA_ALC_PK: txaMeterType = 12;
pub const txaMeterType_TXA_ALC_AV: txaMeterType = 13;
pub const txaMeterType_TXA_ALC_GAIN: txaMeterType = 14;
pub const txaMeterType_TXA_OUT_PK: txaMeterType = 15;
pub const txaMeterType_TXA_OUT_AV: txaMeterType = 16;
pub const txaMeterType_TXA_METERTYPE_LAST: txaMeterType = 17;
pub type txaMeterType = ::std::os::raw::c_uint;
unsafe extern "C" {
    pub fn SetTXAMode(channel: ::std::os::raw::c_int, mode: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXABandpassRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXABandpassFreqs(channel: ::std::os::raw::c_int, low: f64, high: f64);
}
unsafe extern "C" {
    pub fn SetTXABandpassWindow(channel: ::std::os::raw::c_int, wintype: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn SetTXAEQRun(channel: ::std::os::raw::c_int, run: ::std::os::raw::c_int);
}
